# VulkanStarter2D

./: .gitignore  CMakeLists.txt  android_main.cpp  main.cpp
IDEFiles/Linux/: VulkanStarter2D.cbp  VulkanStarter2D.depend  VulkanStarter2D.layout
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/gds/vulkanStarter2D/: VulkanStarter2DActivity.java
conf/: defaultShader.frag  defaultShader.vert  defaultShaderVert.spv  shader.vert  shaderFrag.spv  shaderVert.spv
include/: Animation.h  Definitions.h  Drawable.h  Entity.h  Font.h  GGEGame.h  GameModel.h  GameView.h  GraphicElement.h  GraphicsManager.h  GraphicsUtils.h  InputSystem.h  OS_ANDROID.h  OS_GLFW.h  Renderer.h  RendererBatch.h  ResourcesManager.h  Shader.h  SoundManager.h  SoundObject.h  Sprite.h  Text.h  Texture.h  TextureAtlas.h  UIObject.h
libsLinux/conf/: shader.frag
libsOSX/vulkan/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_khronos_validation.json
libsWin/debug/: glfw3.lib
source/: Animation.cpp  Button.cpp  Drawable.cpp  Font.cpp  GGEGame.cpp  GameModel.cpp  GameScreen.cpp  GameView.cpp  GraphicsManager.cpp  GraphicsUtils.cpp  OS_GLFW.cpp  Renderer.cpp  RendererBatch.cpp  ResourcesManager.cpp  SoundManager.cpp  SoundObject.cpp  Sprite.cpp  Text.cpp  TextureAtlas.cpp  UIObject.cpp
source/android/: OS_ANDROID.cpp  vulkan_wrapper.cpp
source/desktop/: OS_GLFW.cpp
